gallery ideas and pricing page

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active c-item"> <!--Make own class c-item to control img-->
+      <div class="carousel-item active" c-item data-bs-interval="1500"> <!--Make own class c-item to control img-->
         <img src="images/IMG_0607.jpg" class="d-block w-100 c-img" alt="...">
         <!--Make own class c-img to control img-->
       </div>
-      <div class="carousel-item c-item">
+      <div class="carousel-item c-item" data-bs-interval= "1500">
         <img src="images/IMG_0060.jpg" class="d-block w-100 c-img" alt="...">
       </div>
-      <div class="carousel-item c-item">
+      <div class="carousel-item c-item" data-bs-interval= "1500">
         <img src="images/IMG_6882.jpg" class="d-block w-100 c-img" alt="...">
       </div>
     </div>
