--- a/pricing.html
+++ b/pricing.html
@@ -22,8 +22,8 @@
         <div class="row">
             <div class="col-sm-4" style="background-color: red;">
                 <div class="card" style="width: 18rem; background-color: antiquewhite;">
-                    <img src="images/IMG_0060.jpg" class="card-img-top" alt="...">
-                    <div class="card-body ">
+                    <img src="images/IMG_0060.jpg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body text-center ">
                         <h5 class="card-title">DELUXE WEDDING</h5>
                         <p class="card-text">Large weddings.</p>
                         <p class="card-text">Up to 8hrs of coverage | 1 Photographer | First look session| Online
@@ -32,16 +32,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8 " style="background-color: blue;">
-                <div class="row">
+            <div class="col-lg-8" style="background-color: blue;">
+                <div class="row ">
                     <div class="col-8 col-md-12 ">
-                        <div class="card mb-3 " style="max-width: 540px;  background-color: antiquewhite;">
+                        <div class="card mb-3 text-center " style="max-width: 540px;  background-color: antiquewhite;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/IMG_6636.jpg" class="img-fluid rounded " alt="...">
+                                    <img src="images/IMG_6636.jpg" class="img-fluid " alt="...">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="card-body">
+                                    <div class="card-body ">
                                         <h5 class="card-title">STANDARD WEDDING </h5>
                                         <p class="card-text">Small to medium sized weddings.</p>
                                         <p class="card-text">Up to 6hrs of coverage | 1 Photographer | First look
@@ -58,10 +58,10 @@
                         <div class="card mb-3 " style="max-width: 540px; background-color: antiquewhite;">
                             <div class="row g-0">
                                 <div class="col-md-4 ">
-                                    <img src="images/IMG_6484.jpg" class="img-fluid rounded " alt="...">
+                                    <img src="images/IMG_6484.jpg" class=" img-fluid " alt="...">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="card-body">
+                                    <div class="card-body text-center">
                                         <h5 class="card-title">Standard Wedding</h5>
                                         <p class="card-text">Small to medium sized weddings.</p>
                                         <p class="card-text">Up to 6hrs of coverage | 1 Photographer | First look
