--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="services.html">Services</a>
+          <a class="nav-link" href="gallery1.html"> Gallery</a>
+          <a class="nav-link" href="pricing.html">Prices</a>
           <a class="nav-link" href="about.html">About</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </div>
