--- a/gallery1.html
+++ b/gallery1.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
@@ -41,80 +42,86 @@
         </div>
       </div>
     </nav>
-  
-   
+
+
     <div class="card logobox">
       <img src="images/NZ Photography Logo.png" class="card-img-top c-logo" alt="Logo">
     </div>
-  
+
     <div class="container">
-    <div class="row">
-    <div class="col">
-      <div class="card" style="background-color: antiquewhite;">
-        <a href="images/benliv1.jpg" data-toggle="lightbox" data-gallery="gallery1">
-          <img src="images/benliv1.jpg" class="card-img-top">
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">Engagements/Couples</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="row">
+        <div class="col">
+          <div class="card" style="background-color: antiquewhite;">
+            <a href="images/benliv1.jpg" data-toggle="lightbox" data-gallery="gallery1">
+              <img src="images/benliv1.jpg" class="card-img-top">
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">Engagements/Couples</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="col ">
-      <div class="card" style="background-color: antiquewhite;">
-        <a href="images/IMG_6484.jpg" data-toggle="lightbox" data-gallery="gallery2" >
-          <img src="images/IMG_6484.jpg" class="card-img-top img-fluid">
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">Weddings/Elopements</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <div class="col ">
+          <div class="card" style="background-color: antiquewhite;">
+            <a href="images/IMG_6484.jpg" data-toggle="lightbox" data-gallery="gallery2">
+              <img src="images/IMG_6484.jpg" class="card-img-top img-fluid">
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">Weddings/Elopements</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row"><
-    <div class="col">
-      <div class="card" style="background-color: antiquewhite;">
-        <a href="images/benliv1.jpg" data-toggle="lightbox" data-gallery="gallery1" >
-          <img src="images/benliv1.jpg" class="card-img-top" >
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">Portraits</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="background-color: antiquewhite;">
+              <a href="images/benliv1.jpg" data-toggle="lightbox" data-gallery="gallery1">
+                <img src="images/benliv1.jpg" class="card-img-top">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title">Portraits</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 " style="background-color: antiquewhite;">
+              <a href="images/IMG_6836.jpg" data-toggle="lightbox" data-gallery="gallery2">
+                <img src="images/IMG_6836.jpg" class="card-img-top">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title">Landscapes</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100 " style="background-color: antiquewhite;">
-        <a href="images/IMG_6836.jpg" data-toggle="lightbox" data-gallery="gallery2">
-          <img src="images/IMG_6836.jpg"class="card-img-top">
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">Landscapes</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    </div>
 
-  </div>
-  
-  <div class="row justify-content-center">
-    <!-- elements not showing, use data-remote or data-src-->
-    <div data-toggle="lightbox" data-gallery="gallery1" data-src="https://unsplash.it/1200/768.jpg?image=264"
-      data-title="Hidden item 1"></div>
-    <div data-toggle="lightbox" data-gallery="gallery1" data-src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-      data-title="Hidden item 2"></div>
-    <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=265"
-      data-title="Hidden item 3"></div>
-    <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=266"
-      data-title="Hidden item 4"></div>
-    <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=267"
-      data-title="Hidden item 5"></div>
-  </div>
+      </div>
 
-</div>
-  <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.0/dist/index.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+      <div class="row justify-content-center">
+        <!-- elements not showing, use data-remote or data-src-->
+        <div data-toggle="lightbox" data-gallery="gallery1" data-src="https://unsplash.it/1200/768.jpg?image=264"
+          data-title="Hidden item 1"></div>
+        <div data-toggle="lightbox" data-gallery="gallery1" data-src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          data-title="Hidden item 2"></div>
+        <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=265"
+          data-title="Hidden item 3"></div>
+        <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=266"
+          data-title="Hidden item 4"></div>
+        <div data-toggle="lightbox" data-gallery="gallery2" data-src="https://unsplash.it/1200/768.jpg?image=267"
+          data-title="Hidden item 5"></div>
+      </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.0/dist/index.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+  </body>
 
 </html>
