--- a/pricing.html
+++ b/pricing.html
@@ -29,13 +29,8 @@
         padding:20px;
       }
       .container2{
-        margin-right: 65px;
-        margin-left: 65px;
-        background-color: red; 
         text-align: center;
-        font-family: 'Tangerine', serif;
-        padding:20px;
-        }
+      }
     </style>
 
 
@@ -68,7 +63,7 @@
   </nav>
   
     <div class="container">
-        <div class="row md 5">
+        <div class="row md-5">
           <div class="col-md-6">
             <div class="card">
               <img src="images/IMG_0060.jpg" class="card-img-top" alt="your-image-description">
@@ -82,7 +77,7 @@
           </div>
           <div class="col-md-6">
             <div class="row">
-              <div class="col-md-12 mb-3">
+              <div class="col-md-12 mb-5">
                 <div class="card">
                   <img src="images/IMG_6636.jpg" class="card-img-top" alt="your-image-description">
                   <div class="card-body text-center">
@@ -107,15 +102,28 @@
         </div>
       </div>
 
-      <div class="container2">
-        <h3> Some text to seperate wedding and not wedding stuff</h3>
+      <div class="container">
+        <div class="card card-horizontal">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/300x200" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card Title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="container">
+      <div class="container mb-4" style="margin-bottom: 100px !important">
         <div class="row">
           <div class="col-md-6">
             <div class="row">
-              <div class="col-md-12 mb-3">
+              <div class="col-md-12 mb-5">
                 <div class="card">
                   <img src="images/IMG_6636.jpg" class="card-img-top" alt="your-image-description">
                   <div class="card-body text-center">
@@ -151,6 +159,7 @@
         </div>
       </div>
       
+
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container footer-text">
           @nicolezauskiphotography
