--- a/test_gallery1.html
+++ b/test_gallery1.html
@@ -29,9 +29,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <div class="image-wrapper p-1">
-                    <a href="/gallery2.html"><img class="img-fluid rounded" src="images/benliv1.jpg" alt="..."></a>
-                        
-                    
+                    <a href="gallery2.html"><img class="img-fluid rounded" src="images/benliv1.jpg" alt="..."></a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6">
