--- a/index.html
+++ b/index.html
@@ -44,7 +44,28 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+  <header id="cover" class="bg-light">
+    <div class="container p-4">
+      <div class="row align-items-center">
+        <article class="col-lg-6">
+          <h1 class="display-4">
+            Nicole Zauski Photography
+          </h1>
+          <h2>
+            I'm looking forward to celebrating life's moments with you!
+          </h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, sed saperet phaedrum in, ad quo probo habeo mediocritatem, ex mea cetero iisque tibique. Dico recteque sea ne, brute sapientem vituperata cu mel. Aliquip minimum delicata his in, cu pro impetus suscipit sapientem. Ea quis aliquip pro, at ipsum mucius regione vis. Alii dolorem explicari ad eam, eum fierent recusabo cu, saperet phaedrum splendide an qui. Ad quando appareat mea, eum ad ludus sanctus referrentur. Vix soleat detraxit mediocritatem id, ei hinc urbanitas necessitatibus eum.
+          </p>
+        </article>
+        <div class="col-lg-6">
+            <img  src="images/photographer.jpg" alt="..." class="img-fluid">     
+        </div>
+      </div>
+    </div>
+
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/NZ Photography Logo.png" alt="Logo" width="180" height="75">
@@ -54,7 +75,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ms-auto">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="test_gallery1.html"> Gallery</a>
           <a class="nav-link" href="pricing.html">Prices</a>
@@ -64,11 +85,6 @@
       </div>
     </div>
   </nav>
-
- 
-  <div class="card logobox">
-    <img src="images/NZ Photography Logo.png" class="card-img-top c-logo" alt="Logo">
-  </div>
 
   <div id="main-carousel" class="carousel slide" data-bs-ride="carousel"> <!--Make own name and carry it through-->
     <div class="carousel-indicators">
@@ -101,10 +117,6 @@
 
   <div class="container">
     <div class="row">
-    <div class="col-sm intro-text">
-      <h1>Hi There!</h1>
-      <p>My name is Nicole. I am a wedding, portrait, and lifestyle photographer servicing New Hampshire and the surrounding areas including Vermont, New York, Maine, and Massachusetts. I also travel frequently to western New York including Buffalo, Rochester, and Syracuse. </p>
-    </div>
     <div class="col-sm intro-text">
       <figure data-behold-id="LB8gY5nO7W99dBHv5eDt"></figure>   <!--https://app.behold.so/feeds   instagram scraper open source-->
   <script src="https://w.behold.so/widget.js" type="module"></script>
