--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,12 @@
   <link href="styles.css" rel="stylesheet">
 
   <title>Nicole Zauski Photography</title>
+  <style>
+    h1,
+    h2 {
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -69,49 +75,74 @@
     <img src="images/NZ Photography Logo.png" class="card-img-top c-logo" alt="Logo">
   </div>
 
-  <div class ="intro-text">
+  <div class="container" id="formhead">
     <h1>Let's Get In Touch</h1>
     <h2>I Can't Wait To Hear From You!!!</h2>
   </div>
-  <div class="container-flui d-flex justify-content-center">
-    <form action="https://formspree.io/f/mqkolade" method="POST">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" name="name" class="form-control" id="name" aria-describedby="name" placeholder="Name" autofocus>
-      </div>
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" name="email"class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
-      </div>
-      <div class="form-group">
-        <label for="Subject">Subject</label>
-        <input type="text" name="Subject"class="form-control" id="Subject" aria-describedby="Subject" placeholder="Subject" autofocus="on">
-      </div>
-      <div class="form-group">
-        <label for="textarea1">Message</label>
-        <textarea type="text" name="message"class="form-control" id="exampleFormControlTextarea1" placeholder="Message"rows="3"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
 
-          
+  <section id="form">
+    <div class="container">
+
+      <form action="https://formspree.io/f/mqkolade" class="row g-3" method="POST">
+
+        <div class="col-md-6 mb-3">
+          <label for="fname" class="form-label mb-0">First Name</label>
+          <input type="text" name="fname" class="form-control" id="fname" aria-describedby="name"
+            placeholder="First Name" autofocus required>
+        </div>
+
+        <div class="col-md-6 mb-3">
+          <label for="lname" class="form-label mb-0">Last Name</label>
+          <input type="text" name="lname" class="form-control" id="lname" aria-describedby="name"
+            placeholder="Last Name"  required>
+        </div>
+
+        <div class="col-md-8 mb-3">
+          <label for="email" class="form-label mb-0">Email address</label>
+          <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
+            placeholder="Enter email" required>
+          <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="phone" class="form-label mb-0">Phone</label>
+          <input type="tel" name="tel" class="form-control" id="tel" aria-describedby="Phone"
+            placeholder="123-456-7890">
+        </div>
+
+        <div class="col-md-12 mb-3">
+          <label for="textarea1">Message</label>
+          <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1"
+            placeholder="Message" rows="5"></textarea>
+        </div>
+
+        <div class="col-md-6 mb-3">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+      </form>
+    </div>
+
+  </section>
 
 
- 
+
 
   <footer class="footer mt-auto py-3 bg-dark">
     <div class="container footer-text">
       @nicolezauskiphotography
       <span class="text-muted">
-        <a href="https://www.instagram.com/nicolezauskiphotography/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram insta-favicon" viewBox="0 0 16 16">
-          <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-        </svg>       
-        <a href="contact.html"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope envelope-favicon" viewBox="0 0 16 16">
-          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-        </svg>
-      </a>
+        <a href="https://www.instagram.com/nicolezauskiphotography/"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+            height="16" fill="currentColor" class="bi bi-instagram insta-favicon" viewBox="0 0 16 16">
+            <path
+              d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+          </svg>
+          <a href="contact.html"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+              class="bi bi-envelope envelope-favicon" viewBox="0 0 16 16">
+              <path
+                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+            </svg>
+          </a>
       </span>
     </div>
   </footer>
