--- a/index.html
+++ b/index.html
@@ -114,6 +114,23 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  
+  <br>
+  <br>
+
+  <div class="container">
+    <h2>
+      Lorem ipsum dolor sit amet, sed saperet phaedrum in, ad quo probo habeo mediocritatem, 
+      ex mea cetero iisque tibique. Dico recteque sea ne, brute sapientem vituperata cu mel. 
+      Aliquip minimum delicata his in, cu pro impetus suscipit sapientem. Ea quis aliquip pro,
+       at ipsum mucius regione vis. Alii dolorem explicari ad eam, eum fierent recusabo cu, 
+       saperet phaedrum splendide an qui. Ad quando appareat mea, eum ad ludus sanctus referrentur.
+        Vix soleat detraxit mediocritatem id, ei hinc urbanitas necessitatibus eum.
+    <h2>
+  </div>
+  <br>
+  <br>
+  <br>
 
   <div class="container">
     <div class="row">
