--- a/Ben_Liv_engagement_gallery.html
+++ b/Ben_Liv_engagement_gallery.html
@@ -8,13 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <style>
-        .test {
-            text-align: center;
-        }
-    </style>
-
-
+    <!--CSS link below-->
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,7 +35,7 @@
     </nav>
     <br>
     <br>
-    <div class="test">
+    <div class="Ben_Liv_engagement_gallery">
         <h1> Ben & Liv Gallery</h1>
     </div>
     <div class="container">
@@ -57,7 +52,7 @@
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card ">
                     <a href="images/benliv1.jpg" data-toggle="lightbox" data-gallery="gallery">
-                    <img src="images/benliv1.jpg" class="card-img-top img-fluid" alt="your-image-description">
+                        <img src="images/benliv1.jpg" class="card-img-top img-fluid" alt="your-image-description">
                     </a>
                 </div>
             </div>
@@ -66,7 +61,7 @@
                 <div class="card">
                     <a href="images/IMG_0060.jpg" data-toggle="lightbox" data-gallery="gallery"></a>
                     <img src="images/IMG_0060.jpg" class="card-img-top img-fluid" alt="your-image-description">
-                </a>
+                    </a>
                 </div>
             </div>
 
@@ -74,7 +69,7 @@
                 <div class="card">
                     <a href="images/IMG_6636.jpg" data-toggle="lightbox" data-gallery="gallery"></a>
                     <img src="images/IMG_6636.jpg" class="card-img-top img-fluid" alt="your-image-description">
-                </a>
+                    </a>
                 </div>
             </div>
 
@@ -82,7 +77,7 @@
                 <div class="card">
                     <a href="images/IMG_0060.jpg" data-toggle="lightbox" data-gallery="gallery"></a>
                     <img src="images/IMG_0060.jpg" class="card-img-top img-fluid" alt="your-image-description">
-                </a>
+                    </a>
                 </div>
             </div>
 
