--- a/test_gallery1.html
+++ b/test_gallery1.html
@@ -69,17 +69,17 @@
       </nav>
 
 
-    <div class="container mt-5 test">
+    <div class="container container-gallery">
         <h1 class="display-1 text-center">
             <strong>
                 Portraits and Special Occasions
             </strong>
         </h1>
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3"> <!--row for a section with rows with a gutter vertical(gy) of 4 and col number based on screen size-->
+            <div class="col">
                 <a href="Ben_Liv_engagement_gallery.html">
                     <div class="gallery_thumbs">
-                        <img class="img-fluid rounded image_img" src="images/benliv1.jpg" alt="...">
+                        <img class="img-fluid rounded image_img ben" src="images/benliv1.jpg" alt="...">
                         <div class="image_overlay image_overlay--blur">
                             <div class="image_title">Ben & Liv</div>
                             <p class="image_description">Engagement</p>
@@ -87,10 +87,10 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="gallery_thumbs">
                     <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img"
-                            src="images/IMG_6636.jpg" alt="..."></a>
+                            src="images/benliv1.jpg" alt="..."></a>
                     <div class="image_overlay image_overlay--blur">
                         <div class="image_title">Chris & Street</div>
                         <p class="image_description">Engagement</p>
@@ -98,9 +98,9 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col">
                 <div class="gallery_thumbs">
-                    <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img"
+                    <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img ben"
                             src="images/benliv1.jpg" alt="..."></a>
                     <div class="image_overlay image_overlay--blur">
                         <div class="image_title">Ben & Liv</div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="gallery_thumbs">
                     <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img"
                             src="images/IMG_6636.jpg" alt="..."></a>
@@ -118,17 +118,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="gallery_thumbs">
-                    <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img"
-                            src="images/benliv1.jpg" alt="..."></a>
+                    <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img ben"
+                            src="images/IMG_6636.jpg" alt="..."></a>
                     <div class="image_overlay image_overlay--blur">
                         <div class="image_title">Ben & Liv</div>
                         <p class="image_description">Engagement</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="gallery_thumbs">
                     <a href="Ben_Liv_engagement_gallery.html"><img class="img-fluid rounded image_img"
                             src="images/IMG_6636.jpg" alt="..."></a>
