--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
+
   <!--CSS link below-->
   <link href="styles.css" rel="stylesheet">
 
@@ -44,6 +45,12 @@
 </head>
 
 <body>
+   <!--Right click disabled with JS-->
+  <script>
+    document.addEventListener("contextmenu", (event) => {
+       event.preventDefault();
+    });
+ </script>
   <header id="cover" class="bg-light">
     <div class="container p-4">
       <div class="row align-items-center">
@@ -77,9 +84,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="test_gallery1.html"> Gallery</a>
+          <a class="nav-link" href="portraits.html"> Gallery</a>
           <a class="nav-link" href="pricing.html">Prices</a>
-          <a class="nav-link" href="about.html">About</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </div>
       </div>
