--- a/pricing.html
+++ b/pricing.html
@@ -32,16 +32,37 @@
         text-align: center;
       }
     </style>
-
-
-
-
-
-
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+   <!--Right click disabled with JS-->
+   <script>
+    document.addEventListener("contextmenu", (event) => {
+       event.preventDefault();
+    });
+ </script>
+  <header id="cover" class="bg-light">
+    <div class="container p-4">
+      <div class="row align-items-center">
+        <article class="col-lg-6">
+          <h1 class="display-4">
+            Nicole Zauski Photography
+          </h1>
+          <h2>
+            I'm looking forward to celebrating life's moments with you!
+          </h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, sed saperet phaedrum in, ad quo probo habeo mediocritatem, ex mea cetero iisque tibique. Dico recteque sea ne, brute sapientem vituperata cu mel. Aliquip minimum delicata his in, cu pro impetus suscipit sapientem. Ea quis aliquip pro, at ipsum mucius regione vis. Alii dolorem explicari ad eam, eum fierent recusabo cu, saperet phaedrum splendide an qui. Ad quando appareat mea, eum ad ludus sanctus referrentur. Vix soleat detraxit mediocritatem id, ei hinc urbanitas necessitatibus eum.
+          </p>
+        </article>
+        <div class="col-lg-6">
+            <img  src="images/photographer.jpg" alt="..." class="img-fluid">     
+        </div>
+      </div>
+    </div>
+
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/NZ Photography Logo.png" alt="Logo" width="180" height="75">
@@ -51,11 +72,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ms-auto">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="test_gallery1.html"> Gallery</a>
+          <a class="nav-link" href="portraits.html"> Gallery</a>
           <a class="nav-link" href="pricing.html">Prices</a>
-          <a class="nav-link" href="about.html">About</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </div>
       </div>
